# CUDA_Practice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
0-thread_indexing/: CMakeLists.txt  thread_indexing.cu
1-sum_2_arrays/: CMakeLists.txt  sum_2_array.cu
include/: common.hpp  timer.hpp
